--- a/archiving/index.html
+++ b/archiving/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MY PROJECT</title>
+    <title>Home page</title>
   </head>
-  <body>
-    <h2>MY PROJECT</h2>
-    <p>새웹페이지만들기야이건</p>
-  </body>
+  <body></body>
 </html>
