--- a/archiving/enter/index.html
+++ b/archiving/enter/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>enter page</title>
+    <title>Enter</title>
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <div class="section">
-      <div class="container header">
-        <div class="header header__right">
+      <div class="container nav">
+        <div class="nav nav__right">
           <a
             href="https://www.instagram.com/leedaxxeun?igsh=MWcyOTI4anBkM2Z1Yg%3D%3D&utm_source=qr"
             >@leedaxxeun</a
           >
         </div>
-        <div class="header header__left">
+        <div class="nav nav__left">
           <a href="###">About</a>
-          <a href="###">Home</a>
+          <a href="../home/index.html">Home</a>
         </div>
       </div>
     </div>
