--- a/archiving/index.html
+++ b/archiving/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="./style/style.css" />
-    <script src="./script/script.js" defer></script>
+    <title>Enter</title>
+    <link rel="stylesheet" href="./style/style.scss" />
   </head>
   <body>
     <div class="section">
@@ -18,70 +17,51 @@
         </div>
         <div class="nav nav__left">
           <a href="###">About</a>
-          <a href="../enter/index.html">Enter</a>
-        </div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="container header">
-        <div class="header__content">
-          <h1>LeeDaeun</h1>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            vero amet nam quos quaerat est perspiciatis ab asperiores dolor hic,
-            aut perferendis provident exercitationem! Cum tempore voluptate,
-            dolor est, rerum sed sequi vero quia doloribus sunt beatae maiores
-            vitae repellendus magni modi? Ipsam officia fuga cum laudantium
-            aliquid enim laboriosam praesentium expedita facilis magnam, esse
-            magni voluptatem dolor debitis atque itaque nulla. Sunt dignissimos
-            maxime quis itaque ipsam aspernatur, suscipit, reiciendis dolorum
-            nisi asperiores accusamus quas eaque tempore vero quidem
-            reprehenderit vitae inventore nulla. Beatae alias dolore aut
-            voluptatem odit amet assumenda, nulla at error ad. Deserunt ex velit
-            harum!
-          </p>
+          <a href="../home/index.html">Home</a>
         </div>
       </div>
     </div>
     <div class="section">
       <div class="container main">
-        <ol>
-          <li>
-            <div class="main--content">
-              <p class="main--content-number">2021</p>
-              <p class="main--content-title">점프 - 점심 같이 먹기 프로젝트</p>
-              <p class="main--content-button" onclick="rotateText()">+</p>
+        <div class="main__cardgroup">
+          <div class="main--cards">
+            <div class="card">
+              <img
+                src="../../assets/[2021]씨네나잇-포스터.jpg"
+                alt=""
+              />
+              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
-          </li>
-          <li>
-            <div class="main--content">
-              <p class="main--content-number">2021</p>
-              <p class="main--content-title">점프 - 점심 같이 먹기 프로젝트</p>
-              <p class="main--content-button">+</p>
+            <div class="card">
+              <img
+                src="../../assets/[2021]씨네나잇-포스터.jpg"
+                alt=""
+              />
+              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
-          </li>
-          <li>
-            <div class="main--content">
-              <p class="main--content-number">2021</p>
-              <p class="main--content-title">점프 - 점심 같이 먹기 프로젝트</p>
-              <p class="main--content-button">+</p>
+            <div class="card">
+              <img
+                src="../../assets/[2021]씨네나잇-포스터.jpg"
+                alt=""
+              />
+              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
-          </li>
-          <li>
-            <div class="main--content">
-              <p class="main--content-number">2021</p>
-              <p class="main--content-title">점프 - 점심 같이 먹기 프로젝트</p>
-              <p class="main--content-button">+</p>
+            <div class="card">
+              <img
+                src="../../assets/[2021]씨네나잇-포스터.jpg"
+                alt=""
+              />
+              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
-          </li>
-          <li>
-            <div class="main--content">
-              <p class="main--content-number">2021</p>
-              <p class="main--content-title">점프 - 점심 같이 먹기 프로젝트</p>
-              <p class="main--content-button">+</p>
+            <div class="card">
+              <img
+                src="../../assets/[2021]씨네나잇-포스터.jpg"
+                alt=""
+              />
+              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
-          </li>
-        </ol>
+          </div>
+        </div>
       </div>
     </div>
     <div class="section">
