--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="nav nav__left">
           <a href="###">About</a>
-          <a href="../home/index.html">Home</a>
+          <a href="./Home/index.html">Home</a>
         </div>
       </div>
     </div>
