--- a/Home/index.html
+++ b/Home/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="nav nav__left">
           <a href="###">About</a>
-          <a href="../enter/index.html">Enter</a>
+          <a href="../index.html">Enter</a>
         </div>
       </div>
     </div>
