--- a/index.html
+++ b/index.html
@@ -26,38 +26,23 @@
         <div class="main__cardgroup">
           <div class="main--cards">
             <div class="card">
-              <img
-                src="../../assets/[2021]씨네나잇-포스터.jpg"
-                alt=""
-              />
+              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
               <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
             <div class="card">
-              <img
-                src="../../assets/[2021]씨네나잇-포스터.jpg"
-                alt=""
-              />
+              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
               <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
             <div class="card">
-              <img
-                src="../../assets/[2021]씨네나잇-포스터.jpg"
-                alt=""
-              />
+              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
               <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
             <div class="card">
-              <img
-                src="../../assets/[2021]씨네나잇-포스터.jpg"
-                alt=""
-              />
+              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
               <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
             <div class="card">
-              <img
-                src="../../assets/[2021]씨네나잇-포스터.jpg"
-                alt=""
-              />
+              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
               <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
             </div>
           </div>
