--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="section">
       <div class="container nav">
-        <div class="nav nav__right">
+        <div class="nav__right">
           <a
             href="https://www.instagram.com/leedaxxeun?igsh=MWcyOTI4anBkM2Z1Yg%3D%3D&utm_source=qr"
             >@leedaxxeun</a
           >
         </div>
-        <div class="nav nav__left">
+        <div class="nav__left">
           <a href="###">About</a>
           <a href="./Home/index.html">Home</a>
         </div>
