--- a/Home/index.html
+++ b/Home/index.html
@@ -10,15 +10,17 @@
   <body>
     <div class="section">
       <div class="container nav">
-        <div class="nav nav__right">
+        <div class="nav__right">
           <a
             href="https://www.instagram.com/leedaxxeun?igsh=MWcyOTI4anBkM2Z1Yg%3D%3D&utm_source=qr"
             >@leedaxxeun</a
           >
         </div>
-        <div class="nav nav__left">
-          <a href="###">About</a>
-          <a href="../index.html">Enter</a>
+        <div class="nav__left">
+          <a class="nav__left-text" href="../About/index.html">About</a>
+          <a class="nav__left-icon" href="../About/index.html">A</a>
+          <a class="nav__left-text" href="../index.html">Enter</a>
+          <a class="nav__left-icon" href="../index.html">E</a>
         </div>
       </div>
     </div>
@@ -26,19 +28,15 @@
       <div class="container header">
         <div class="header__content">
           <h1>LeeDaeun</h1>
+          <p>상명대학교 문화예술경영전공 재학</p>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            vero amet nam quos quaerat est perspiciatis ab asperiores dolor hic,
-            aut perferendis provident exercitationem! Cum tempore voluptate,
-            dolor est, rerum sed sequi vero quia doloribus sunt beatae maiores
-            vitae repellendus magni modi? Ipsam officia fuga cum laudantium
-            aliquid enim laboriosam praesentium expedita facilis magnam, esse
-            magni voluptatem dolor debitis atque itaque nulla. Sunt dignissimos
-            maxime quis itaque ipsam aspernatur, suscipit, reiciendis dolorum
-            nisi asperiores accusamus quas eaque tempore vero quidem
-            reprehenderit vitae inventore nulla. Beatae alias dolore aut
-            voluptatem odit amet assumenda, nulla at error ad. Deserunt ex velit
-            harum!
+            예술경영과 관련된 다양한 프로젝트를 통해 기획자로서의 역량을
+            하뭐라니
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            repellat autem odit reprehenderit sapiente temporibus deserunt
+            minima optio necessitatibus a?
           </p>
         </div>
       </div>
