--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           >
         </div>
         <div class="nav__left">
-          <a href="###">About</a>
-          <a href="./Home/index.html">Home</a>
+          <a class="nav__left-text" href="./About/index.html">About</a>
+          <a class="nav__left-icon" href="./About/index.html">A</a>
+          <a class="nav__left-text" href="./Home/index.html">Home</a>
+          <a class="nav__left-icon" href="./Home/index.html">H</a>
         </div>
       </div>
     </div>
@@ -25,26 +27,31 @@
       <div class="container main">
         <div class="main__cardgroup">
           <div class="main--cards">
-            <div class="card">
-              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
-              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
-            </div>
-            <div class="card">
-              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
-              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
-            </div>
-            <div class="card">
-              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
-              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
-            </div>
-            <div class="card">
-              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
-              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
-            </div>
-            <div class="card">
-              <img src="./assets/[2021]씨네나잇-포스터.jpg" alt="" />
-              <p>9th Archiving Exhibiton 2021 Cine Night: 쉼표</p>
-            </div>
+            <a class="card" href="###">
+              <img src="/assets/Enter/내바오우-포스터.png" alt="" />
+              <p class="card--text card--text-title">
+                내일의바다: 우리가 외면한 오늘
+              </p>
+              <p class="card--text card--text-subtitle">조명하다</p>
+            </a>
+            <a class="card" href="###">
+              <img
+                src="./assets/Enter/은빛사서함-포스터.png"
+                alt=""
+              />
+              <p class="card--text card--text-title">은빛사서함</p>
+              <p class="card--text card--text-subtitle">조명하다</p>
+            </a>
+            <a class="card" href="###">
+              <img src="./assets/Enter/열여덟어른-포스터.png" alt="" />
+              <p class="card--text card--text-title">열여덟 어른</p>
+              <p class="card--text card--text-subtitle">Attent!on</p>
+            </a>
+            <a class="card" href="###">
+              <img src="./assets/Enter/시네나잇-포스터.png" alt="" />
+              <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
+              <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
+            </a>
           </div>
         </div>
       </div>
