--- a/index.html
+++ b/index.html
@@ -28,6 +28,56 @@
         <div class="main__cardgroup">
           <div class="main--cards">
             <a class="card" href="###">
+              <img src="./assets/Enter/임시.png" alt="" />
+              <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
+              <p class="card--text card--text-subtitle">줏대</p> </a
+            ><a class="card" href="###">
+              <img src="./assets/Enter/임시.png" alt="" />
+              <p class="card--text card--text-title">
+                Wish You Well: 수용성 사랑
+              </p>
+              <p class="card--text card--text-subtitle">조명하다</p>
+            </a>
+            <a class="card" href="###">
+              <img
+                src="./assets/Enter/타임플라이-포스터.png"
+                alt=""
+              />
+              <p class="card--text card--text-title">타임플라이</p>
+              <p class="card--text card--text-subtitle">부엉야작실</p>
+            </a>
+            <a class="card" href="###">
+              <img src="./assets/Enter/임시.png" alt="" />
+              <p class="card--text card--text-title">부엉야작실</p>
+              <p class="card--text card--text-subtitle">부엉야작실</p>
+            </a>
+            <a class="card" href="###">
+              <img
+                src="./assets/Enter/레라미프로젝트-포스터.png"
+                alt=""
+              />
+              <p class="card--text card--text-title">레라미 프로젝트</p>
+              <p class="card--text card--text-subtitle">프로젝트 끈</p>
+            </a>
+            <a class="card" href="###">
+              <img src="./assets/Enter/임시.png" alt="" />
+              <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
+              <p class="card--text card--text-subtitle">청룡과 향이</p>
+            </a>
+            <a class="card" href="###">
+              <img
+                src="./assets/Enter/나의우주에게-포스터.png"
+                alt=""
+              />
+              <p class="card--text card--text-title">나의 우주에게</p>
+              <p class="card--text card--text-subtitle">우쥬</p>
+            </a>
+            <a class="card" href="###">
+              <img src="./assets/Enter/그곳-포스터.png" alt="" />
+              <p class="card--text card--text-title">그곳</p>
+              <p class="card--text card--text-subtitle">망망</p>
+            </a>
+            <a class="card" href="###">
               <img src="/assets/Enter/내바오우-포스터.png" alt="" />
               <p class="card--text card--text-title">
                 내일의바다: 우리가 외면한 오늘
