--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <p class="card--text card--text-subtitle">Attent!on</p>
             </a>
             <a class="card" href="###">
-              <img src="/assets/Enter/시네나잇-포스터.png" alt="" />
+              <img src="./assets/Enter/시네나잇-포스터.png" alt="" />
               <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
               <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
             </a>
