--- a/index.html
+++ b/index.html
@@ -28,77 +28,65 @@
         <div class="main__cardgroup">
           <div class="main--cards">
             <a class="card" href="###">
-              <img src="./assets/Enter/임시.png" alt="" />
+              <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
               <p class="card--text card--text-subtitle">줏대</p> </a
             ><a class="card" href="###">
-              <img src="./assets/Enter/임시.png" alt="" />
+              <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">
                 Wish You Well: 수용성 사랑
               </p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
             <a class="card" href="###">
-              <img
-                src="./assets/Enter/타임플라이-포스터.png"
-                alt=""
-              />
+              <img src="./assets/Enter/timefly-poster.png" alt="" />
               <p class="card--text card--text-title">타임플라이</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
             </a>
             <a class="card" href="###">
-              <img src="./assets/Enter/임시.png" alt="" />
+              <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">부엉야작실</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
             </a>
             <a class="card" href="###">
-              <img
-                src="./assets/Enter/레라미프로젝트-포스터.png"
-                alt=""
-              />
+              <img src="./assets/Enter/laramie-poster.png" alt="" />
               <p class="card--text card--text-title">레라미 프로젝트</p>
               <p class="card--text card--text-subtitle">프로젝트 끈</p>
             </a>
             <a class="card" href="###">
-              <img src="./assets/Enter/임시.png" alt="" />
+              <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
               <p class="card--text card--text-subtitle">청룡과 향이</p>
             </a>
             <a class="card" href="###">
-              <img
-                src="./assets/Enter/나의우주에게-포스터.png"
-                alt=""
-              />
+              <img src="./assets/Enter/dearmyuniverse-poster.png" alt="" />
               <p class="card--text card--text-title">나의 우주에게</p>
               <p class="card--text card--text-subtitle">우쥬</p>
             </a>
             <a class="card" href="###">
-              <img src="./assets/Enter/그곳-포스터.png" alt="" />
+              <img src="./assets/Enter/there-poster.png" alt="" />
               <p class="card--text card--text-title">그곳</p>
               <p class="card--text card--text-subtitle">망망</p>
             </a>
             <a class="card" href="###">
-              <img src="/assets/Enter/내바오우-포스터.png" alt="" />
+              <img src="./assets/Enter/sea-poster.png" alt="" />
               <p class="card--text card--text-title">
                 내일의바다: 우리가 외면한 오늘
               </p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
             <a class="card" href="###">
-              <img
-                src="./assets/Enter/은빛사서함-포스터.png"
-                alt=""
-              />
+              <img src="./assets/Enter/silver-poster.png" alt="" />
               <p class="card--text card--text-title">은빛사서함</p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
             <a class="card" href="###">
-              <img src="./assets/Enter/열여덟어른-포스터.png" alt="" />
+              <img src="./assets/Enter/18-poster.png" alt="" />
               <p class="card--text card--text-title">열여덟 어른</p>
               <p class="card--text card--text-subtitle">Attent!on</p>
             </a>
             <a class="card" href="###">
-              <img src="./assets/Enter/시네나잇-포스터.png" alt="" />
+              <img src="./assets/Enter/cinenight-poster.png" alt="" />
               <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
               <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
             </a>
