--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
         <div class="nav__right">
           <a
             href="https://www.instagram.com/leedaxxeun?igsh=MWcyOTI4anBkM2Z1Yg%3D%3D&utm_source=qr"
-            >@leedaxxeun</a
+            ><h3>@leedaxxeun</h3></a
           >
         </div>
         <div class="nav__left">
-          <a class="nav__left-text" href="./About/index.html">About</a>
-          <a class="nav__left-icon" href="./About/index.html">A</a>
-          <a class="nav__left-text" href="./Home/index.html">Home</a>
-          <a class="nav__left-icon" href="./Home/index.html">H</a>
+          <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
+          <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a>
+          <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
         </div>
       </div>
     </div>
     <div class="section">
+      <div class="container top"></div>
       <div class="container main">
         <div class="main__cardgroup">
           <div class="main--cards">
             <a class="card" href="###">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
-              <p class="card--text card--text-subtitle">줏대</p> </a
-            ><a class="card" href="###">
+              <p class="card--text card--text-subtitle">줏대</p>
+            </a>
+            <a class="card" href="###">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">
                 Wish You Well: 수용성 사랑
@@ -85,7 +87,7 @@
               <p class="card--text card--text-title">열여덟 어른</p>
               <p class="card--text card--text-subtitle">Attent!on</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/cinenight/index.html">
               <img src="./assets/Enter/cinenight-poster.png" alt="" />
               <p class="card--text card--text-title">2021 Cine Night: 쉼표</p>
               <p class="card--text card--text-subtitle">점심같이먹기프로젝트</p>
