--- a/deatil/cinenight/index.html
+++ b/deatil/cinenight/index.html
@@ -168,14 +168,7 @@
           </p>
           <ul>
             <li>장소: 상명대학교 천안캠퍼스 한누리관 10층</li>
-          </ul>
-          <ul>
-            <li>
-              일시: 2021. 12. 02. Thu, 12:00 ~ 18:00 2021. 12. 03. Fri, 12:00 ~
-              16:00
-            </li>
-          </ul>
-          <ul>
+            <li>일시: 2021. 12. 02. Thu - 2021. 12. 03. Fri</li>
             <li>주최 및 주관: 점심같이먹기프로젝트 @jump_smu</li>
           </ul>
         </div>
