--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enter</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <script src="./script/script.js" defer></script>
   </head>
   <body>
+    <div class="section">
+      <div class="container clover">
+        <img src="./assets/Enter/clover.png" alt="" />
+        <img src="./assets/Enter/clover-ver2.png" alt="" />
+      </div>
+    </div>
     <div class="section">
       <div class="container nav">
         <div class="nav__right">
