--- a/deatil/18/index.html
+++ b/deatil/18/index.html
@@ -3,8 +3,181 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./sytle/style.css" />
-    <title>열여덟 어른</title>
+    <link rel="stylesheet" href="./style/style.css" />
+    <title>열여덟어른</title>
   </head>
-  <body></body>
+  <body>
+    <div class="section">
+      <div class="container nav">
+        <div class="nav__right">
+          <a class="nav__right-text" href="../../index.html"><h3>Back</h3></a>
+          <a class="nav__right-icon" href="../../index.html"><h3>←</h3></a>
+        </div>
+        <div class="nav__left">
+          <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="section">
+      <div class="container header">
+        <div>
+          <ul class="header__content">
+            <li>
+              <p class="header__content-all header__content-highlight">2021</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">2022</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">2023</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">2024</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-highlight">공연</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">전시</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">프로젝트</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-highlight">기획</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">홍보</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">디자인</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">무대</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-highlight">
+                콘텐츠 기획
+              </p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-highlight">학교</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">동아리</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">개인 작업</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">대외활동</p>
+            </li>
+            <li>
+              <p class="header__content-all header__content-black">기타</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+
+    <div class="section">
+      <div class="container main">
+        <div class="main__content main__content-left">
+          <div class="main__content-leftitem main__content-poster">
+            <img src="../../assets/detail/18/18-poster-detail.png" alt="" />
+          </div>
+          <div class="main__content-grid3">
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-1-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-2-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-3-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-4-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-5-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-6-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-7-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-8-deatil.jpg" alt="" />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/18/18-9-deatil.jpg" alt="" />
+            </div>
+          </div>
+
+          <div class="main__content-grid2">
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/18/18-stillcut1-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/18/18-stillcut2-detail.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div class="main__content main__content-right">
+          <div>
+            <h1>연극 &lt;열여덟 어른&gt;</h1>
+            <ul class="main__element">
+              <li>
+                <p class="main__element-all main__element-typea">2021</p>
+              </li>
+              <li>
+                <p class="main__element-all main__element-typea">공연</p>
+              </li>
+              <li>
+                <p class="main__element-all main__element-typea">기획</p>
+              </li>
+              <li>
+                <p class="main__element-all main__element-typea">학교</p>
+              </li>
+              <!-- <li>
+                <p class="main__element-all main__element-typeb">2022</p>
+              </li> -->
+            </ul>
+          </div>
+          <p>
+            연극 &lt;열여덟 어른&gt;은 보호종료아동의 삶에 주목하고
+            있습니다.또래보다 먼저 사회에 발을 내디딘 ‘열여덟 어른’들이 전하는
+            이야기 그 자체에 주목해 주세요. 꿈을 찾으며 열심히 살아가는 이들의
+            삶을 같은 청춘으로서, 이 사회의 구성원으로서 응원해 주시기 바랍니다.
+          </p>
+
+          <span
+            ><p><b>시놉시스</b></p>
+            <p>
+              정신과 윤호, 민철은 보육원 시절 형제처럼 지낸 사이다. 이들은 만
+              열여덟 살이 되면 자립 정착금 삼백만 원을 받고 보육원을 퇴소해야
+              한다. 하지만, 성진은 퇴소 후 얼마 되지 않아 자살을 하게 된다.
+              성진의 10번째 기일, 성진의 의문의 죽음에 대해 윤호와 민철은
+              고심한다. 보육원 보호종료 후 10년이 지난 그들의 이야기
+            </p></span
+          >
+
+          <ul>
+            <li>공연 장소: 상명대학교 천안캠퍼스 계당관 블랙박스</li>
+            <li>공연 일시: 2022. 05. 22. Sun. 14:00, 17:00</li>
+            <li>주최 및 주관: 상명대학교 문화예술경영전공 @attention_smu</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
