--- a/deatil/cinenight/index.html
+++ b/deatil/cinenight/index.html
@@ -90,9 +90,9 @@
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
-          <div class="main__content-leftitem">
+          <div class="main__content-leftitem main__content-poster">
             <img
-              src="../../assets/detail/cinenight/cinenight-poster.png"
+              src="../../assets/detail/cinenight/cinenight-poster-detail.jpg"
               alt=""
             />
           </div>
@@ -131,7 +131,7 @@
             </div>
           </div>
 
-          <div class="main__content-grid2">
+          <div class="main__content-gridrow">
             <div class="main__content-leftitem">
               <img
                 src="../../assets/detail/cinenight/cinenight-6-detail.jpg"
