--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       </div>
     </div>
     <div class="section">
+      <div class="container header">
+        <h1>leedaeun</h1>
+      </div>
+    </div>
+    <div class="section">
       <div class="container top"></div>
       <div class="container main">
         <div class="main__cardgroup">
@@ -57,7 +62,7 @@
               <p class="card--text card--text-title">부엉야작실</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/laramie/index.html">
               <img src="./assets/Enter/laramie-poster.png" alt="" />
               <p class="card--text card--text-title">레라미 프로젝트</p>
               <p class="card--text card--text-subtitle">프로젝트 끈</p>
@@ -89,7 +94,7 @@
               <p class="card--text card--text-title">은빛사서함</p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/18/index.html">
               <img src="./assets/Enter/18-poster.png" alt="" />
               <p class="card--text card--text-title">열여덟 어른</p>
               <p class="card--text card--text-subtitle">Attent!on</p>
@@ -104,7 +109,9 @@
       </div>
     </div>
     <div class="section">
-      <div class="container footer"></div>
+      <div class="container footer">
+        <p>© 2024 LeeDaeun All rights reserved</p>
+      </div>
     </div>
   </body>
 </html>
