--- a/deatil/timefly/index.html
+++ b/deatil/timefly/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>씨네나잇</title>
+    <title>TimeFly</title>
   </head>
   <body>
     <div class="section">
@@ -14,68 +14,54 @@
           <a class="nav__right-icon" href="../../index.html"><h3>←</h3></a>
         </div>
         <div class="nav__left">
-          <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
-          <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a>
-          <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
-          <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
+          <a class="nav__left-text" href="../../index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="../../Home/index.html"><h3>H</h3></a>
         </div>
       </div>
     </div>
-
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
           <div class="main__content-leftitem main__content-poster">
             <img
-              src="../../assets/detail/cinenight/cinenight-poster-detail.jpg"
+              src="../../assets/detail/timefly/timefly-poster-detail.png"
               alt=""
             />
-          </div>
-          <div class="main__content-grid2">
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/cinenight/cinenight-4-detail.jpg"
-                alt=""
-              />
-            </div>
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/cinenight/cinenight-5-detail.jpg"
-                alt=""
-              />
-            </div>
           </div>
           <div class="main__content-grid3">
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-1-detail.jpg"
+                src="../../assets/detail/timefly/timefly-1-detail.jpg"
                 alt=""
               />
             </div>
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-2-detail.jpg"
+                src="../../assets/detail/timefly/timefly-2-detail.jpg"
                 alt=""
               />
             </div>
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-3-detail.jpg"
-                alt=""
-              />
-            </div>
-          </div>
-
-          <div class="main__content-grid2">
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/cinenight/cinenight-6-detail.jpg"
+                src="../../assets/detail/timefly/timefly-3-detail.jpg"
                 alt=""
               />
             </div>
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-7-detail.jpg"
+                src="../../assets/detail/timefly/timefly-4-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/timefly/timefly-5-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/timefly/timefly-6-detail.jpg"
                 alt=""
               />
             </div>
@@ -83,8 +69,7 @@
         </div>
         <div class="main__content main__content-right">
           <div>
-            <h2>9th Archiving Exhibiton</h2>
-            <h2>&lt;2021 Cine Night: 쉼표&gt;</h2>
+            <h1>전시 &lt;Time Fly: 나의 예술 타임라인에 대하여&gt;</h1>
             <ul class="main__element">
               <li>
                 <p class="main__element-all main__element-typea">2023</p>
@@ -118,31 +103,34 @@
               </li> -->
             </ul>
           </div>
+          <span
+            ><p>
+              2023년 상반기 부엉야작실을 통해 참가자는 '나의 예술 타임라인'을
+              주제로 각자의 인생에 예술이 들어온 순간, 예술을 놓아버리고 싶었던
+              순간, 예술인으로서 마주하고 싶은 순간 등 과거에서 미래까지 이어질
+              예술적 삶에 대한 질문에 대해 이야기를 나눴다.
+            </p>
+            <p>
+              전시 프로젝트 &lt;Time Fly: 나의 예술 타임라인에 대하여&gt;는 그
+              질문에 대한 답을 예술작품으로 재탄생시켜 전시로 공개하고자 한다.
+            </p></span
+          >
+          <p></p>
+          <p>
+            작품 제작은 폐플라스틱을 3D 작품의 재료로 전환하는 친환경 단체
+            '에코피엘'과의 협업을 통해 진행됐다. 과거에 사용되어 버려진 물건이
+            미래의 예술작품으로 변화하는 과정에서 '예술에 쓸모없는 재료와 경험은
+            없다'라는 전시의 부주제를 전달하고자 한다.
+          </p>
 
-          <p>
-            이번 2021년 Cine Night은 팬데믹의 장기화로 인해 모든 문화예술행사가
-            잠시 주춤함에 따라 부득이하게 아카이빙 전시로 대체하여, >9회차를
-            맞은 Cine Night의 지난 발걸음을 되돌아보고자 합니다.
-          </p>
-          <p>
-            &lt;Cine Night&gt;은 2015년 11월 27에 처음으로 진행되어 올해 9회차를
-            맞게 되었습니다. 매년 다른 컨셉 아래 영화/애니메이션 크리에이터를
-            희망하는 안서동 대학생들의 작품을 상영하고 버스킹공연을 진행하며
-            대학생들의 일상에 활기를 불어왔습니다. 하지만 코로나 팬데믹으로 올해
-            시네나잇은 쉬어가는 의미로 ‘아카이빙 전시’를 기획했습니다. 지난 해
-            진행해온 점프 부원들의 흔적을 전시하고자, 역대 시네나잇의 활동을
-            기록하는 이번 전시는 ‘점프’의 정체성을 잠시 들여다보는 시간으로
-            내년의 행보를 기대하며 잠시 쉬어가겠습니다.
-          </p>
           <ul>
-            <li>장소: 상명대학교 천안캠퍼스 한누리관 10층</li>
-            <li>일시: 2021. 12. 02. Thu - 2021. 12. 03. Fri</li>
-            <li>주최 및 주관: 점심같이먹기프로젝트 @jump_smu</li>
+            <li>- 전시 장소: The터 (안서동 314-3 성공빌 1층)</li>
+            <li>
+              <p>- 전시 일시: 2023. 05. 30. - 2023. 05. 31.</p>
+            </li>
+            <li>- 주최 및 주관: 문라이트 아트살롱 @moonlight_artsalon</li>
           </ul>
         </div>
-      </div>
-      <div class="section">
-        <div class="container footer"></div>
       </div>
     </div>
   </body>
