--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/timefly/index.html">
               <img src="./assets/Enter/timefly-poster.png" alt="" />
               <p class="card--text card--text-title">타임플라이</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
@@ -72,7 +72,7 @@
               <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
               <p class="card--text card--text-subtitle">청룡과 향이</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/dearmyuniverse/index.html">
               <img src="./assets/Enter/dearmyuniverse-poster.png" alt="" />
               <p class="card--text card--text-title">나의 우주에게</p>
               <p class="card--text card--text-subtitle">우쥬</p>
@@ -89,7 +89,7 @@
               </p>
               <p class="card--text card--text-subtitle">조명하다</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/silver/index.html">
               <img src="./assets/Enter/silver-poster.png" alt="" />
               <p class="card--text card--text-title">은빛사서함</p>
               <p class="card--text card--text-subtitle">조명하다</p>
