--- a/deatil/silver/index.html
+++ b/deatil/silver/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>씨네나잇</title>
+    <title>은빛사서함</title>
   </head>
   <body>
     <div class="section">
@@ -14,68 +14,84 @@
           <a class="nav__right-icon" href="../../index.html"><h3>←</h3></a>
         </div>
         <div class="nav__left">
-          <a class="nav__left-text" href="./About/index.html"><h3>About</h3></a>
-          <a class="nav__left-icon" href="./About/index.html"><h3>A</h3></a>
-          <a class="nav__left-text" href="./Home/index.html"><h3>Home</h3></a>
-          <a class="nav__left-icon" href="./Home/index.html"><h3>H</h3></a>
+          <a class="nav__left-text" href="../../index.html"><h3>Home</h3></a>
+          <a class="nav__left-icon" href="../../Home/index.html"><h3>H</h3></a>
         </div>
       </div>
     </div>
-
     <div class="section">
       <div class="container main">
         <div class="main__content main__content-left">
           <div class="main__content-leftitem main__content-poster">
             <img
-              src="../../assets/detail/cinenight/cinenight-poster-detail.jpg"
+              src="../../assets/detail/silver/silver-poster-detail.png"
               alt=""
             />
           </div>
-          <div class="main__content-grid2">
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/cinenight/cinenight-4-detail.jpg"
-                alt=""
-              />
-            </div>
-            <div class="main__content-leftitem">
-              <img
-                src="../../assets/detail/cinenight/cinenight-5-detail.jpg"
-                alt=""
-              />
-            </div>
-          </div>
+
           <div class="main__content-grid3">
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-1-detail.jpg"
+                src="../../assets/detail/silver/silver-1-detail.jpg"
                 alt=""
               />
             </div>
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-2-detail.jpg"
+                src="../../assets/detail/silver/silver-2-detail.jpg"
                 alt=""
               />
             </div>
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-3-detail.jpg"
+                src="../../assets/detail/silver/silver-3-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img src="../../assets/detail/silver/silver-4-detail.jpg" />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/silver/silver-5-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/silver/silver-6-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/silver/silver-7-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/silver/silver-8-detail.jpg"
+                alt=""
+              />
+            </div>
+            <div class="main__content-leftitem">
+              <img
+                src="../../assets/detail/silver/silver-9-detail.jpg"
                 alt=""
               />
             </div>
           </div>
-
           <div class="main__content-grid2">
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-6-detail.jpg"
+                src="../../assets/detail/silver/silver-stillcut1-detail.jpeg"
                 alt=""
               />
             </div>
             <div class="main__content-leftitem">
               <img
-                src="../../assets/detail/cinenight/cinenight-7-detail.jpg"
+                src="../../assets/detail/silver/silver-stillcut2-detail.jpeg"
                 alt=""
               />
             </div>
@@ -83,11 +99,10 @@
         </div>
         <div class="main__content main__content-right">
           <div>
-            <h2>9th Archiving Exhibiton</h2>
-            <h2>&lt;2021 Cine Night: 쉼표&gt;</h2>
+            <h1>전시 &lt;은빛사서함&gt;</h1>
             <ul class="main__element">
               <li>
-                <p class="main__element-all main__element-typea">2023</p>
+                <p class="main__element-all main__element-typea">2022</p>
               </li>
               <li>
                 <p class="main__element-all main__element-typea">전시</p>
@@ -102,7 +117,7 @@
                 <p class="main__element-all main__element-typea">디자인</p>
               </li>
               <li>
-                <p class="main__element-all main__element-typea">프로젝트</p>
+                <p class="main__element-all main__element-typea">학교</p>
               </li>
               <li>
                 <p class="main__element-all main__element-typea">카드뉴스</p>
@@ -113,36 +128,40 @@
               <li>
                 <p class="main__element-all main__element-typea">리플렛</p>
               </li>
+              <li>
+                <p class="main__element-all main__element-typea">MD</p>
+              </li>
+
               <!-- <li>
                 <p class="main__element-all main__element-typeb">2022</p>
               </li> -->
             </ul>
           </div>
+          <span
+            ><p>
+              전시 &lt;은빛사서함&gt;은 '더 늦기 전에', '은퇴 후' 화가로서 제
+              2의 인생을 도전하는 시니어 화가를 주제로 진행하는 전시다.
+            </p>
+            <p>
+              전시 타이틀 &lt;은빛사서함&gt;은 '노인'과 '이야기 창구'라는 이중적
+              의미를 담았다.
+            </p>
+            <p>
+              본 전시를 통해 어딘가에 등단하거나 화가를 자격을 타인에 의해
+              부여받지 않아도 도전하고 성취해내는 과정 자체가 가치 있음을
+              조명하고자 했다. 그리 거창하지 않아도 도전 자체가 예술인 시니어
+              화가의 작품을 통해 그들이 이야기를 만나보길 바란다.
+            </p></span
+          >
 
-          <p>
-            이번 2021년 Cine Night은 팬데믹의 장기화로 인해 모든 문화예술행사가
-            잠시 주춤함에 따라 부득이하게 아카이빙 전시로 대체하여, >9회차를
-            맞은 Cine Night의 지난 발걸음을 되돌아보고자 합니다.
-          </p>
-          <p>
-            &lt;Cine Night&gt;은 2015년 11월 27에 처음으로 진행되어 올해 9회차를
-            맞게 되었습니다. 매년 다른 컨셉 아래 영화/애니메이션 크리에이터를
-            희망하는 안서동 대학생들의 작품을 상영하고 버스킹공연을 진행하며
-            대학생들의 일상에 활기를 불어왔습니다. 하지만 코로나 팬데믹으로 올해
-            시네나잇은 쉬어가는 의미로 ‘아카이빙 전시’를 기획했습니다. 지난 해
-            진행해온 점프 부원들의 흔적을 전시하고자, 역대 시네나잇의 활동을
-            기록하는 이번 전시는 ‘점프’의 정체성을 잠시 들여다보는 시간으로
-            내년의 행보를 기대하며 잠시 쉬어가겠습니다.
-          </p>
           <ul>
-            <li>장소: 상명대학교 천안캠퍼스 한누리관 10층</li>
-            <li>일시: 2021. 12. 02. Thu - 2021. 12. 03. Fri</li>
-            <li>주최 및 주관: 점심같이먹기프로젝트 @jump_smu</li>
+            <li>- 전시 장소: 상명갤러리</li>
+            <li>
+              <p>- 전시 일시: 일시: 2022. 06. 04. - 2022. 06. 06.</p>
+            </li>
+            <li>- 주최 및 주관: 조명하다 @jomyunghada</li>
           </ul>
         </div>
-      </div>
-      <div class="section">
-        <div class="container footer"></div>
       </div>
     </div>
   </body>
