--- a/deatil/cinenight/index.html
+++ b/deatil/cinenight/index.html
@@ -120,23 +120,20 @@
           </div>
 
           <p>
-            이번 2021년 Cine Night은 팬데믹의 장기화로 인해 모든 문화예술행사가
-            잠시 주춤함에 따라 부득이하게 아카이빙 전시로 대체하여, >9회차를
-            맞은 Cine Night의 지난 발걸음을 되돌아보고자 합니다.
+            2021년 Cine Night은 팬데믹의 장기화로 인해 모든 문화예술행사가 잠시
+            주춤함에 따라 부득이하게 아카이빙 전시로 대체하여, >9회차를 맞은
+            Cine Night의 지난 발걸음을 되돌아보고자 합니다.
           </p>
           <p>
             &lt;Cine Night&gt;은 2015년 11월 27에 처음으로 진행되어 올해 9회차를
             맞게 되었습니다. 매년 다른 컨셉 아래 영화/애니메이션 크리에이터를
             희망하는 안서동 대학생들의 작품을 상영하고 버스킹공연을 진행하며
-            대학생들의 일상에 활기를 불어왔습니다. 하지만 코로나 팬데믹으로 올해
-            시네나잇은 쉬어가는 의미로 ‘아카이빙 전시’를 기획했습니다. 지난 해
-            진행해온 점프 부원들의 흔적을 전시하고자, 역대 시네나잇의 활동을
-            기록하는 이번 전시는 ‘점프’의 정체성을 잠시 들여다보는 시간으로
-            내년의 행보를 기대하며 잠시 쉬어가겠습니다.
+            대학생들의 일상에 활기를 불어왔습니다. 이번 전시는 ‘점프’의 정체성을
+            잠시 들여다보는 시간으로 내년의 행보를 기대하며 잠시 쉬어가겠습니다.
           </p>
           <ul>
             <li>장소: 상명대학교 천안캠퍼스 한누리관 10층</li>
-            <li>일시: 2021. 12. 02. Thu - 2021. 12. 03. Fri</li>
+            <li>일시: 2021. 12. 02. - 2021. 12. 03.</li>
             <li>주최 및 주관: 점심같이먹기프로젝트 @jump_smu</li>
           </ul>
         </div>
