--- a/deatil/dearmyuniverse/index.html
+++ b/deatil/dearmyuniverse/index.html
@@ -178,32 +178,51 @@
               </li> -->
             </ul>
           </div>
-          <span
-            ><p>
-              2023년 상반기 부엉야작실을 통해 참가자는 '나의 예술 타임라인'을
-              주제로 각자의 인생에 예술이 들어온 순간, 예술을 놓아버리고 싶었던
-              순간, 예술인으로서 마주하고 싶은 순간 등 과거에서 미래까지 이어질
-              예술적 삶에 대한 질문에 대해 이야기를 나눴다.
-            </p>
+          <p>
+            <b>누구나 자신만의 궤도가 있다.</b>
+          </p>
+          <span>
             <p>
-              전시 프로젝트 &lt;Time Fly: 나의 예술 타임라인에 대하여&gt;는 그
-              질문에 대한 답을 예술작품으로 재탄생시켜 전시로 공개하고자 한다.
-            </p></span
-          >
+              무수한 별마다 자기만의 궤도가 있듯 우리 역시 저마다의 궤도가 있고,
+              그걸 서로가 알고, 덕분에 각자의 영역을 지켜내며 삶을 살아가고
+              있다. 그러나 우리는 별이 아닌 인간이기에, 꽤 자주 이 사실을
+              망각하며 때로는 중력에 스스로를 맡기기도 한다. 그러다 나와는 다른
+              회전운동을 하는 궤도와 부딪히기도, 깨어지기도 했다. 다시 말해
+              우리는 나에게 무의미한 것이 타인에게는 의미 있는 것임을 알면서도
+              존중하지 못했던 순간들, 타인의 궤도와 나의 궤도를 억지로 맞추려
+              했던 순간을 기억한다. 어느 순간 '사랑'조차 일이 되어버린 것도 이
+              때문인지 모르겠다.
+            </p>
+          </span>
           <p></p>
           <p>
-            작품 제작은 폐플라스틱을 3D 작품의 재료로 전환하는 친환경 단체
-            '에코피엘'과의 협업을 통해 진행됐다. 과거에 사용되어 버려진 물건이
-            미래의 예술작품으로 변화하는 과정에서 '예술에 쓸모없는 재료와 경험은
-            없다'라는 전시의 부주제를 전달하고자 한다.
+            세상에는 많은 사람이 있고 그 수만큼 삶의 방식도 다양합니다. 그리고
+            그 속에는 더 다양한 방식으로 서로를 사랑하는 사람들이 있습니다.
+            각자의 궤도에 따라 회전운동을 하는 우리는 내가 사랑하는 사람을
+            온전히 이해하지 못해 가끔 힘들어합니다. (중략) 내가 중요하게 여기는
+            의미와 무의미가 타인에게 이해 받을 수 없다고 해도, 혹은 그 반대라도,
+            우리는 그렇게 공존하기 때문에 그 의미와 무의미는 가치 있지 않을까요?
           </p>
+          <p></p>
+          <span
+            ><p><b>시놉시스</b></p>
+            <p>
+              시점은 가까운 미래. 해미와 유성은 6년 동안 지구와 우주라는 먼
+              거리를 둔 오래된 연인이다. 우주에 있는 유성과 연결(미래에 우주와
+              통신하는 방법을 칭함)이 유일하게 가능한 사람은 해미 뿐이다. 어느
+              때와 같이 연결을 이어가던 둘은 서로의 다름을 점점 인식하게 된다.
+              그리고 그 다름으로 인한 충돌 사이로 그들이 겪는 진동은 그들에게
+              어떤 의미를 가져다 줄까.
+            </p></span
+          >
 
           <ul>
-            <li>- 전시 장소: The터 (안서동 314-3 성공빌 1층)</li>
+            <li>공연 장소: 천안 제이갤러리</li>
+            <li>공연 일시: 2022. 12. 01. - 2022. 12. 03.</li>
             <li>
-              <p>- 전시 일시: 2023. 05. 30. - 2023. 05. 31.</p>
+              주최 및 주관: 상명대학교 문화예술경영전공 / Would You 우쥬
+              @dear.my_wouldyou
             </li>
-            <li>- 주최 및 주관: 문라이트 아트살롱 @moonlight_artsalon</li>
           </ul>
         </div>
       </div>
