--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <div class="container main">
         <div class="main__cardgroup">
           <div class="main--cards">
-            <a class="card" href="###">
+            <a class="card" href="./deatil/dosol/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">도솔: 도파민 솔루션</p>
               <p class="card--text card--text-subtitle">줏대</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/wishyouwell/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">
                 Wish You Well: 수용성 사랑
@@ -57,7 +57,7 @@
               <p class="card--text card--text-title">타임플라이</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/owl/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">부엉야작실</p>
               <p class="card--text card--text-subtitle">부엉야작실</p>
@@ -67,7 +67,7 @@
               <p class="card--text card--text-title">레라미 프로젝트</p>
               <p class="card--text card--text-subtitle">프로젝트 끈</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/onecam/index.html">
               <img src="./assets/Enter/stopgap.png" alt="" />
               <p class="card--text card--text-title">콘텐츠 원캠퍼스</p>
               <p class="card--text card--text-subtitle">청룡과 향이</p>
@@ -77,12 +77,12 @@
               <p class="card--text card--text-title">나의 우주에게</p>
               <p class="card--text card--text-subtitle">우쥬</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/there/index.html">
               <img src="./assets/Enter/there-poster.png" alt="" />
               <p class="card--text card--text-title">그곳</p>
               <p class="card--text card--text-subtitle">망망</p>
             </a>
-            <a class="card" href="###">
+            <a class="card" href="./deatil/sea/index.html">
               <img src="./assets/Enter/sea-poster.png" alt="" />
               <p class="card--text card--text-title">
                 내일의바다: 우리가 외면한 오늘
